# MyChatServer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SERVER.cbp  Timestamptest  UserManagertest  cmake_install.cmake  mysqlMgrtest  note.md
base/: AsyncLog.h  CMakeLists.txt  Makefile  cmake_install.cmake
chatserversrc/: BussinessLogic.cpp  BussinessLogic.h  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  MonitorServer.cpp  MonitorServer.h  MonitorSession.cpp  MonitorSession.h  Msg.h  MsgCacheManager.cpp  MsgCacheManager.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  UserManager.h  main.cpp
etc/: chatserver.conf
fileseversrc/: FileManager.cpp  FileManager.h  FileMsg.h  FileServer.cpp  FileServer.h  FileSession.cpp  FileSession.h  TcpSession.cpp  TcpSession.h  main.cpp
imgserversrc/: main.cpp
myChatserver/chatserversrc/: ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  MsgCacheManager.cpp  MsgCacheManager.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  UserManager.h
myChatserver/mysqlmgr/: MysqlManager.cpp  MysqlManager.h  MysqlTask.h  MysqlThrd.cpp  MysqlThrd.h  MysqlThrdMgr.cpp  MysqlThrdMgr.h  TaskList.cpp  TaskList.h
mysqlmgr/: MysqlManager.cpp  MysqlThrdMgr.h  TaskList.h
net/: Buffer.h  Channel.cpp  Connector.cpp  EventLoop.cpp  Sockets.cpp  Sockets.h  TcpConnection.cpp  TcpServer.cpp  TcpServer.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_name
test/base/: AsynLogtest.cpp  Timestamptest.cpp
test/chatserver/: UserManagertest.cpp
test/json/: jsontest.cpp
test/net/: Polltest.cpp
test/sql/: mysqlMgrtest.cpp
